<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/apps_smart_sort_title"
        android:textColor="#38445C"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/smart_sort"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:text="@string/confirm_smart_sort"
        android:textColor="#38445C"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/restore_sort"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:text="@string/restore_smart_sort"
        android:textColor="#38445C"
        android:textSize="16sp" />

</LinearLayout>