<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<com.lewa.launcher.Hidden xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hidden_bg_color" >

    <RelativeLayout android:id="@+id/title_area" 
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/statusbar_height"
        android:background="@drawable/widget_list_title_bg" >
        <TextView android:id="@+id/hidden_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hidden_app_title"
            android:textColor="#fff"
            android:textSize="16sp" />
    </RelativeLayout>
    
    <TextView android:id="@+id/hidden_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:textSize="16sp"
        android:text="@string/no_hidden_apps"
        android:textColor="#fff" />

    <com.lewa.launcher.HiddenLayout
        android:id="@+id/hidden_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/workspace_left_padding"
        android:layout_marginRight="@dimen/workspace_right_padding"
        android:layout_marginBottom="80dip"
        android:layout_below="@id/title_area" />

    <LinearLayout android:id="@+id/edit_area"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="16dip"
	    android:gravity="center">
	    <Button android:id="@+id/hidden_edit"
	        android:layout_width="110dip"
	        android:layout_height="45dip"
	        android:background="@drawable/full_btn_normal"	        
	        android:text="@string/edit"
	        android:textColor="#fff" />
	    <Button android:id="@+id/hidden_cancel"
            android:layout_width="110dip"
            android:layout_height="45dip"
            android:background="@drawable/left_btn_normal"
            android:text="@android:string/cancel"
            android:textColor="#fff" />
	    <Button android:id="@+id/hidden_done"
            android:layout_width="110dip"
            android:layout_height="45dip"
            android:background="@drawable/right_btn_normal"
            android:text="@string/done"
            android:textColor="#fff" />
    </LinearLayout>
    <com.lewa.launcher.DesktopIndicator 
        android:id="@+id/hidden_indicator"
        android:layout_width="wrap_content"        
        android:layout_height="6dip"
        android:layout_marginBottom="12dip"
        android:layout_above="@id/edit_area"
        android:layout_centerHorizontal="true"/>
</com.lewa.launcher.Hidden>